--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "inspiredminds/contao-austrian-administrative-areas",
     "description": "Contao extension to provide a form field for Austrian administrative areas (e.g. districts and municipalities).",
-    "keywords": ["contao", "austria", "administrative", "district", "form", "select"],
+    "keywords": ["contao", "austria", "administrative", "district", "form", "select", "postal", "zip"],
     "type": "contao-bundle",
     "homepage": "http://www.inspiredminds.at",
     "license": "LGPL-3.0-or-later",
