--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,16 @@
         }
     ],
     "support": {
-        "email": "fmg@inspiredminds.at",
         "issues": "https://github.com/inspiredminds/contao-austrian-administrative-areas/issues",
         "source": "https://github.com/inspiredminds/contao-austrian-administrative-areas",
         "forum": "https://community.contao.org/de"
     },
+    "funding": [
+        {
+            "type": "github",
+            "url": "https://github.com/sponsors/fritzmg"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "contao/core-bundle": "^4.4",
