--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,30 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "contao/core-bundle": "^4.4",
-        "symfony/config": "^3.2 || ^4.0",
-        "symfony/http-kernel": "^3.2 || ^4.0",
-        "symfony/cache": "^3.4.35 || ^4.2.12"
+        "php": ">=8.1",
+        "contao/core-bundle": "^4.13 || ^5.0",
+        "symfony/config": "^5.4 || ^6.4",
+        "symfony/http-kernel": "^5.4 || ^6.4",
+        "symfony/cache": "^5.4 || ^6.4",
+        "league/csv": "^9.15"
+    },
+    "require-dev": {
+        "contao/easy-coding-standard": "^6.0",
+        "contao/rector": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "InspiredMinds\\ContaoAustrianAdministrativeAreasBundle\\": "src/"
+            "InspiredMinds\\ContaoAustrianAdministrativeAreas\\": "src/"
         }
     },
     "extra": {
-        "contao-manager-plugin": "InspiredMinds\\ContaoAustrianAdministrativeAreasBundle\\ContaoManagerPlugin"
+        "contao-manager-plugin": "InspiredMinds\\ContaoAustrianAdministrativeAreas\\ContaoManager\\Plugin"
+    },
+    "config": {
+        "allow-plugins": {
+            "contao-components/installer": true,
+            "php-http/discovery": false,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
