--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,21 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "contao/core-bundle": "^4.13 || ^5.0",
-        "symfony/config": "^5.4 || ^6.4",
-        "symfony/http-kernel": "^5.4 || ^6.4",
-        "symfony/cache": "^5.4 || ^6.4",
+        "symfony/config": "^5.4 || ^6.4 || ^7.3",
+        "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.3",
+        "symfony/filesystem": "^5.4 || ^6.4 || ^7.3",
+        "symfony/http-client": "^5.4 || ^6.4 || ^7.3",
+        "symfony/http-foundation": "^5.4 || ^6.4 || ^7.3",
+        "symfony/http-kernel": "^5.4 || ^6.4 || ^7.3",
+        "symfony/cache": "^5.4 || ^6.4 || ^7.3",
         "league/csv": "^9.15"
     },
     "require-dev": {
         "contao/easy-coding-standard": "^6.0",
-        "contao/rector": "^1.0"
+        "contao/rector": "^1.0",
+        "shipmonk/composer-dependency-analyser": "^1.4"
     },
     "autoload": {
         "psr-4": {
